--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "@helsingborg-stad/npm-api-error-handling",
   "version": "0.0.0",
-  "description": "",
+  "description": "Error handling for Node js applications",
   "main": "index.js",
+  "repository": {
+    "url": "git://https://github.com/helsingborg-stad/npm-api-error-handling"
+  },
+  "bugs": {
+    "url": "https://github.com/helsingborg-stad/npm-api-error-handling/issues"
+  },
+  "author": "Helsingborg Stad",
   "scripts": {
     "build": "echo \"Error: no build command specified\" && exit 1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "url": "git://https://github.com/helsingborg-stad/npm-api-error-handling"
+  "engines": {
+    "node": ">= 0.10"
   },
-  "author": "Helsingborg Stad",
-  "license": "ISC"
+  "license": "MIT"
 }
