--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "author": "Helsingborg Stad",
   "scripts": {
     "build": "echo \"Error: no build command specified\" && exit 1",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests/*.test.js"
   },
   "engines": {
     "node": ">= 0.10"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2"
+  }
 }
