--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "author": "Helsingborg Stad",
   "scripts": {
-    "lint": "eslint src test",
-    "lint:fix": "eslint --fix src test",
+    "lint": "eslint src/**",
+    "lint:fix": "eslint --fix src/**",
     "build": "echo \"Error: no build command specified\" && exit 1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,7 +21,11 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0"
+  },
+  "dependencies": {
+    "eslint-plugin-import": "^2.19.1"
   }
 }
