--- a/package.json
+++ b/package.json
@@ -11,11 +11,21 @@
   },
   "author": "Helsingborg Stad",
   "scripts": {
+    "lint": "eslint src/**",
+    "lint:fix": "eslint --fix src/**",
     "build": "echo \"Error: no build command specified\" && exit 1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
     "node": ">= 0.10"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb-base": "^14.0.0"
+  },
+  "dependencies": {
+    "eslint-plugin-import": "^2.19.1"
+  }
 }
