--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "lint": "eslint src/**",
     "lint:fix": "eslint --fix src/**",
     "build": "echo \"Error: no build command specified\" && exit 1",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests/*.test.js"
   },
   "engines": {
     "node": ">= 0.10"
   },
   "license": "MIT",
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2"
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0"
-  },
-  "dependencies": {
     "eslint-plugin-import": "^2.19.1"
-  }
+  },
 }
