--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,146 +27,144 @@
 # Sebastian Thulin (sebastian.thulin@helsingborg.se)
 #
 version: 2.1
-executors:
-  docker-publisher:
+
+defaults: &defaults
+    working_directory: ~/application
     docker:
-      - image: circleci/buildpack-deps:stretch
+        - image: circleci/node:12.3.1
 
 jobs:
 
-  lint:
-    working_directory: ~/application
-    docker:
-      - image: circleci/node:12.3.1
-    steps:
-      # Check out the code in the project directory.
-      - checkout
+    lint:
+        <<: *defaults  
+        steps:
+        # Check out the code in the project directory.
+        - checkout
 
-      - restore_cache:
-          key: lint-v1-{{ checksum "package.json" }}-{{ arch }}
+        - restore_cache:
+            key: lint-v1-{{ checksum "package.json" }}-{{ arch }}
 
-      - run: 
-          name: Install depencencys
-          command: npm install
+        - run: 
+            name: Install depencencys
+            command: npm install
 
-      - save_cache:
-          key: lint-v1-{{ checksum "package.json" }}-{{ arch }}
-          paths:
-            - node_modules
+        - save_cache:
+            key: lint-v1-{{ checksum "package.json" }}-{{ arch }}
+            paths:
+                - node_modules
 
-      - run:
-          name: Running eslint
-          command: |
-            mkdir -p test-results/eslint
-            npm run lint
-          when: always
+        - run:
+            name: Running eslint
+            command: |
+                mkdir -p test-results/eslint
+                npm run lint
+            when: always
 
-      # Persist temporary files (stored up to 30 days).
-      - persist_to_workspace:
-          root: ~/application
-          paths:
-            - node_modules
+        # Persist temporary files (stored up to 30 days).
+        - persist_to_workspace:
+            root: ~/application
+            paths:
+                - node_modules
 
-      - store_test_results:
-          path: test-results/eslint
+        - store_test_results:
+            path: test-results/eslint
 
-      - store_artifacts:
-          path: test-results/eslint
+        - store_artifacts:
+            path: test-results/eslint
 
-  unit:
-    working_directory: ~/application
-    docker:
-      - image: circleci/node:12.3.1
-    steps:
-      # Check out the code in the project directory.
-      - checkout
+    unit:
+        <<: *defaults  
+        steps:
+        # Check out the code in the project directory.
+        - checkout
 
-      - restore_cache:
-          key: unit-v1-{{ checksum "package.json" }}-{{ arch }}
+        - restore_cache:
+            key: unit-v1-{{ checksum "package.json" }}-{{ arch }}
 
-      - run: 
-          name: Install depencencys
-          command: npm install
+        - run: 
+            name: Install depencencys
+            command: npm install
 
-      - save_cache:
-          key: node-v1-{{ checksum "package.json" }}-{{ arch }}
-          paths:
-            - node_modules
+        - save_cache:
+            key: node-v1-{{ checksum "package.json" }}-{{ arch }}
+            paths:
+                - node_modules
 
-      - run:
-          name: Run application tests (mocha)
-          command: |
-            mkdir -p test-results/unit
-            npm run test
+        - run:
+            name: Run application tests (mocha)
+            command: |
+                mkdir -p test-results/unit
+                npm run test
 
-      # Persist temporary files (stored up to 30 days).
-      - persist_to_workspace:
-          root: ~/application
-          paths:
-            - node_modules
+        # Persist temporary files (stored up to 30 days).
+        - persist_to_workspace:
+            root: ~/application
+            paths:
+                - node_modules
 
-      # Store logs.
-      - store_test_results:
-          path: test-results/unit
+        # Store logs.
+        - store_test_results:
+            path: test-results/unit
 
-      # Store artifacts (example logs, binaries, etc).
-      - store_artifacts:
-          path: test-results/unit
+        # Store artifacts (example logs, binaries, etc).
+        - store_artifacts:
+            path: test-results/unit
 
-  build:
-    executor: docker-publisher
-    steps:
-      - checkout
-      - setup_remote_docker
+    build:
+        <<: *defaults  
+        steps:
+        - checkout
 
-      - run:
-          name: Build Docker image
-          command: |
-            docker build -t $CIRCLE_PROJECT_REPONAME:latest .
+        - run:
+            name: Build application
+            command: |
+                npm build
 
-      - run:
-          name: Archive Docker image
-          command: docker save -o image.tar $CIRCLE_PROJECT_REPONAME
+    set_pkg_number_release:
+        <<: *defaults  
+        steps:
+        - checkout
 
-      - persist_to_workspace:
-          root: .
-          paths:
-            - ./image.tar
+        - run:
+            name: Bump package version [release]
+            command: |
+                git config user.name "CircleCI bot"
+                git config user.email "circleci@circleci"
+                npm version minor -m "Bumped version number to %s [ci skip]"
+                git push origin HEAD:master
+                git push --tags
 
-  set_pkg_number_release:
-    working_directory: ~/application
-    docker:
-      - image: circleci/node:12.3.1
+    set_pkg_number_beta:
+        <<: *defaults  
+        steps:
 
-    steps:
-      - checkout
+        - checkout
 
-      - run:
-          name: Bump package version [release]
-          command: |
-            git config user.name "CircleCI bot"
-            git config user.email "circleci@circleci"
-            npm version minor -m "Bumped version number to %s [ci skip]"
-            git push origin HEAD:master
-            git push --tags
+        - run:
+            name: Bump package version [beta]
+            command: |
+                git config user.name "CircleCI bot"
+                git config user.email "circleci@circleci"
+                npm version prerelease --preid=beta -m "Bumped version number to %s [ci skip]"
+                git push origin HEAD:develop
+                git push --tags
+    publish:
+        <<: *defaults
+        steps:
+            - attach_workspace:
+                at: ~/application
+            - run:
+                name: Set registry URL
+                command: npm set @helsingborg-stad:registry https://npm.pkg.github.com
+            - run:
+                name: Authenticate with registry
+                command: |
+                    echo "@helsingborg-stad:registry=https://npm.pkg.github.com/" > ~/application/.npmrc
+                    echo "//npm.pkg.github.com/:_authToken=\"$github_pkgs_Token\"" >> ~/application/.npmrc
+            - run:
+                name: Publish package
+                command: npm publish
 
-  set_pkg_number_beta:
-    working_directory: ~/application
-    docker:
-      - image: circleci/node:12.3.1
-
-    steps:
-
-      - checkout
-
-      - run:
-          name: Bump package version [beta]
-          command: |
-            git config user.name "CircleCI bot"
-            git config user.email "circleci@circleci"
-            npm version prerelease --preid=beta -m "Bumped version number to %s [ci skip]"
-            git push origin HEAD:develop
-            git push --tags
 
 workflows:
   version: 2
@@ -193,6 +191,12 @@ workflows:
                 - master
                 - develop 
                 - /feature.*/
+      - publish:
+          filters:
+            branches:
+              only:
+                - master
+                - develop
       - set_pkg_number_release:
           filters:
             branches:
