--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@helsingborg-stad/npm-api-error-handling",
   "version": "0.0.0",
   "description": "Error handling for Node js applications",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": {
     "url": "git://https://github.com/helsingborg-stad/npm-api-error-handling"
   },
@@ -11,7 +11,6 @@
   },
   "author": "Helsingborg Stad",
   "scripts": {
-    "build": "echo \"Error: no build command specified\" && exit 1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
