Fixed syntax in circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,91 +38,91 @@ jobs:
     lint:
         <<: *defaults  
         steps:
-        # Check out the code in the project directory.
-        - checkout
+            # Check out the code in the project directory.
+            - checkout
 
-        - restore_cache:
-            key: lint-v1-{{ checksum "package.json" }}-{{ arch }}
+            - restore_cache:
+                key: lint-v1-{{ checksum "package.json" }}-{{ arch }}
 
-        - run: 
-            name: Install depencencys
-            command: npm install
+            - run: 
+                name: Install depencencys
+                command: npm install
 
-        - save_cache:
-            key: lint-v1-{{ checksum "package.json" }}-{{ arch }}
-            paths:
-                - node_modules
+            - save_cache:
+                key: lint-v1-{{ checksum "package.json" }}-{{ arch }}
+                paths:
+                    - node_modules
 
-        - run:
-            name: Running eslint
-            command: |
-                mkdir -p test-results/eslint
-                npm run lint
-            when: always
+            - run:
+                name: Running eslint
+                command: |
+                    mkdir -p test-results/eslint
+                    npm run lint
+                when: always
 
-        # Persist temporary files (stored up to 30 days).
-        - persist_to_workspace:
-            root: ~/application
-            paths:
-                - node_modules
+            # Persist temporary files (stored up to 30 days).
+            - persist_to_workspace:
+                root: ~/application
+                paths:
+                    - node_modules
 
-        - store_test_results:
-            path: test-results/eslint
+            - store_test_results:
+                path: test-results/eslint
 
-        - store_artifacts:
-            path: test-results/eslint
+            - store_artifacts:
+                path: test-results/eslint
 
     unit:
         <<: *defaults  
         steps:
-        # Check out the code in the project directory.
-        - checkout
+            # Check out the code in the project directory.
+            - checkout
 
-        - restore_cache:
-            key: unit-v1-{{ checksum "package.json" }}-{{ arch }}
+            - restore_cache:
+                key: unit-v1-{{ checksum "package.json" }}-{{ arch }}
 
-        - run: 
-            name: Install depencencys
-            command: npm install
+            - run: 
+                name: Install depencencys
+                command: npm install
 
-        - save_cache:
-            key: node-v1-{{ checksum "package.json" }}-{{ arch }}
-            paths:
-                - node_modules
+            - save_cache:
+                key: node-v1-{{ checksum "package.json" }}-{{ arch }}
+                paths:
+                    - node_modules
 
-        - run:
-            name: Run application tests (mocha)
-            command: |
-                mkdir -p test-results/unit
-                npm run test
+            - run:
+                name: Run application tests (mocha)
+                command: |
+                    mkdir -p test-results/unit
+                    npm run test
 
-        # Persist temporary files (stored up to 30 days).
-        - persist_to_workspace:
-            root: ~/application
-            paths:
-                - node_modules
+            # Persist temporary files (stored up to 30 days).
+            - persist_to_workspace:
+                root: ~/application
+                paths:
+                    - node_modules
 
-        # Store logs.
-        - store_test_results:
-            path: test-results/unit
+            # Store logs.
+            - store_test_results:
+                path: test-results/unit
 
-        # Store artifacts (example logs, binaries, etc).
-        - store_artifacts:
-            path: test-results/unit
+            # Store artifacts (example logs, binaries, etc).
+            - store_artifacts:
+                path: test-results/unit
 
     set_pkg_number_release:
         <<: *defaults  
         steps:
-        - checkout
+            - checkout
 
-        - run:
-            name: Bump package version [release]
-            command: |
-                git config user.name "CircleCI bot"
-                git config user.email "circleci@circleci"
-                npm version minor -m "Bumped version number to %s [ci skip]"
-                git push origin HEAD:master
-                git push --tags
+            - run:
+                name: Bump package version [release]
+                command: |
+                    git config user.name "CircleCI bot"
+                    git config user.email "circleci@circleci"
+                    npm version minor -m "Bumped version number to %s [ci skip]"
+                    git push origin HEAD:master
+                    git push --tags
 
     publish:
         <<: *defaults
@@ -164,6 +164,7 @@ workflows:
                 filters:
                     branches:
                     only:
+                        - master
                         - develop
                 requires:
                     - lint
