Inital circleci config commit (#4)
* Inital circleci config commit

* Updated circleci configuration

* Fixed publish flow in circleci config

* Fixed syntax in circleci config

* Fixed syntax problems

* Test for getting eslint to run

* Fixed linting errors

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@helsingborg-stad/npm-api-error-handling",
   "version": "0.0.0",
   "description": "Error handling for Node js applications",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": {
     "url": "git://https://github.com/helsingborg-stad/npm-api-error-handling"
   },
@@ -13,7 +13,6 @@
   "scripts": {
     "lint": "eslint src/**",
     "lint:fix": "eslint --fix src/**",
-    "build": "echo \"Error: no build command specified\" && exit 1",
     "test": "mocha tests/*.test.js"
   },
   "engines": {
@@ -22,10 +21,10 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.2.2"
+    "mocha": "^6.2.2",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
-    "eslint-config-airbnb-base": "^14.0.0"
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1"
-  },
+  }
 }
