--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,8 +125,8 @@ jobs:
     publish:
         <<: *defaults
         steps:
-            - attach_workspace:
-                at: ~/application
+            - checkout
+            
             - run:
                 name: Set registry URL
                 command: npm set @helsingborg-stad:registry https://npm.pkg.github.com
