--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@helsingborg-stad/npm-api-error-handling",
-  "version": "0.15.0",
+  "version": "0.15.1",
   "description": "Error handling for Node js applications",
   "main": "src/index.js",
   "repository": {
@@ -20,11 +20,12 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^6.2.2",
     "babel-eslint": "^10.0.3",
+    "chai": "^4.2.0",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.19.1"
+    "eslint-plugin-import": "^2.19.1",
+    "mocha": "^6.2.2",
+    "typescript": "^4.5.5"
   }
 }
